--- a/html/index.html
+++ b/html/index.html
@@ -35,12 +35,17 @@
             </ul>
         </div>
 </header>
-<section class="section">
-    <h2 class="section__error">ОШИБКА</h2>
-    <h1 class="section__404">404</h1>
-    <p class="section__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-    <p class="section__text-small">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-    <input type="button" class="section__btn" value="Button">
-</section>
+<div class="error-404 block-white block-white__margin flex">
+    <div class="block-white__padding">
+        <div class="error-404__error">ОШИБКА</div>
+        <div class="error-404__title">404</div>
+        <div class="error-404__text">Страница, которую Вы ищите, <br> более недоступна</div>
+        <a href="https://newtesting.mercury.gl/" class="btn btn_primary button button_red_big">На главную</a>
+    </div>
+    <div class="footer">
+        <span class="copyright"><b class="copyright_bold">Mercury</b> Global © 2018</span>
+    </div>
+</div>
+
 </body>
 </html>
